public/styles/layout.css
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  color: #545149;
  background-color: #f4f1ec;
  font-size: 24px;
  font-family: "Source Sans 3", sans-serif;
}

span {
  margin-top: 1.5em;
}
S main {
  width: 100%;
  background-color: #545149;
  align-items: center;
}

.source-sans {
  font-family: "Source Sans 3", sans-serif;
}

h2 {
  margin-left: 0%;
}

.flex-justify {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.tweet-icons {
  display: flex;
}

.fa-solid.fa-flag,
.fa-solid.fa-retweet,
.fa-solid.fa-heart {
  color: #7680cb;
}

.fa-solid.fa-flag:hover {
  color: goldenrod;
}

.fa-solid.fa-retweet:hover {
  color: goldenrod;
}

.fa-solid.fa-heart:hover {
  color: goldenrod;
}

.tweet-header {
  margin: 1% 2% 0% 2%;
}

.tweet-footer {
  margin: 1% 2% 0% 2%;
}

hr {
  border: 1px solid;
}

article {
  border: 4px solid black;
  margin-top: 1%;
  margin-left: 1%;
  margin-right: 1%;
  transition: box-shadow 0.2s;
}

article:hover {
  box-shadow: 0 0 22px rgba(99, 9, 195, 0.44);
}

.container {
  margin: 1% 2% 0% 2%;
}

h4 {
  margin-top: 0%;
}

.tweeted-text {
  margin-left: 2%;
}

.icon-name {
  display: flex;
  flex-direction: row;
}

.error-length,
.error-no-message {
  border: 1px solid;
  margin: 10px 0px;
  padding: 15px 10px 15px 50px;
  background-repeat: no-repeat;
  background-position: 10px center;
  color: #d8000c;
  background-color: #ffbaba;
  background-image: url("https://i.imgur.com/GnyDvKN.png");
}

.error-length {
  border: 1px solid;
  margin: 10px 0px;
  padding: 15px 10px 15px 50px;
  background-repeat: no-repeat;
  background-position: 10px center;
  color: #d8000c;
  background-color: #ffbaba;
  background-image: url("https://i.imgur.com/GnyDvKN.png");
}

.display-none {
  display: none;
}

@media only screen and (min-width: 1024px) {
  .new-tweet {
    padding-top: 1px;
  }

  .container {
    width: 66.7%;
    float: right;
  }
  main {
    max-width: 1024px;
    font-size: 16px;
    margin: 0 auto;
  }
}

.source-sans {
  font-family: "Source Sans 3", sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: end;
}

